--- a/css/services.css
+++ b/css/services.css
@@ -138,3 +138,12 @@
         width:75%;
     }
 }
+
+#services-queries-section{
+    text-align: center;
+}
+
+#services-queries{
+    text-align: center;
+}
+
